@@ -127,6 +127,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - Doctor tab now supports both:
   - `Run Shell Doctor` for shell integration checks.
   - `Run Adapter Doctor` for adapter/plugin maintenance health (`adapter doctor --text`).
+  - `Run Adapter Doctor (Strict)` for fail-closed adapter health (`adapter doctor --text --strict`).
 - Behavior:
   - SAME vs baseline: launch allowed.
   - CHANGED/BLOCKED vs baseline: explicit accept/decline flow.
