@@ -44,6 +44,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Launchpad History now supports `Ctrl+Shift+C` digest-only copy from history list/details.
 - Launchpad History details now include artifact fingerprint/digest plus safe/operator receipt digests for quick cross-verification.
 - Launchpad Doctor tab now includes `Run Adapter Doctor` (text mode) so adapter/plugin maintenance health can be checked directly from UI.
+- Launchpad Doctor tab now includes `Run Adapter Doctor (Strict)` for fail-closed adapter maintenance checks from UI.
 - Ticket-pack test coverage now enforces adapter evidence artifact carry-through (`analysis/capability_ledger_v0.json`, `analysis/adapter_summary_v0.json`, `analysis/adapter_findings_v0.json`) when those artifacts are present in a run.
 - Ticket-pack default extras now include `report_card_v0.json` so structured report output is carried with ticket bundles when available.
 - Ticket-pack summaries now include adapter evidence fields (`adapterEvidence`, adapter identity, capability counts) for faster operator/support triage.
